width changes in contact

--- a/index.html
+++ b/index.html
@@ -210,10 +210,10 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-8 col-lg-offset-2">
+                <div class="col-lg-12 text-center">
                   <h4>Hit me up!</h4>
                   <p>I'm always up for a coffee and would love to discuss current projects.</p>
-                  <div class="col-lg-4">
+                  <div class="col-lg-12">
                     <div class="text-center">
                       <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
                           <i class="fa fa-envelope"></i> Drop me a line
@@ -262,7 +262,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-12">
                   <div class="text-center">
                     <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
                         <i class="fa fa-envelope"></i> Drop me a line
