swap resume and contact spots

--- a/index.html
+++ b/index.html
@@ -200,6 +200,25 @@
         </div>
     </section>
 
+    <!-- Resume Section -->
+    <section id="resume">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <h2>Resume</h2>
+            <hr class="star-light">
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-12 text-center">
+            <iframe src="https://resume.creddle.io/embed/6woabnpfnu4"
+            width="850" height="1100" seamless></iframe>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- End resume section -->
+
     <!-- Contact Section -->
     <section class="success" id="contact">
         <div class="container">
@@ -261,37 +280,10 @@
                     </form> -->
                 </div>
             </div>
-            <div class="row">
-                <div class="col-lg-12">
-                  <div class="text-center">
-                    <a href="mailto:james.p.anderson16@gmail.com?subject=Reaching%20Out&body=How%20are%20you" class="btn btn-lg btn-outline">
-                        <i class="fa fa-envelope"></i> Drop me a line
-                    </a>
-                  </div>
-                </div>
-            </div>
         </div>
         </div>
     </section>
 <!-- End contact section -->
-
-    <!-- Resume Section -->
-    <section class="success" id="resume">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <h2>Resume</h2>
-            <hr class="star-light">
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-lg-12 text-center">
-            <iframe src="https://resume.creddle.io/embed/6woabnpfnu4"
-              width="850" height="1100" seamless></iframe>
-          </div>
-        </div>
-      </div>
-    </section>
 
     <!-- Footer -->
     <footer class="text-center">
