--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         <div class="row">
           <div class="col-lg-12 text-center">
             <h2>Resume</h2>
-            <hr class="star-light">
+            <hr class="star-primary">
           </div>
         </div>
         <div class="row">
