--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                 </div>
                 <div class="col-lg-8">
                     <p>I'm a software developer.</p>
-                    <p>I currently live in Colorado but I'm originally from Oklahoma and I've been a fair few places in between.</p>
+                    <p>I currently live in north Georgia but I'm originally from Oklahoma and I've been a fair few places in between.</p>
                     <p>My first foray into tech was way back in the MySpace days. I loved tinkering with my profile and adding angry teenager music in the background for all to enjoy once they landed on my page. It was fun, but I never really considered it a career. Fast-forward a good few years. After finishing my bachelors, I relocated to NYC and found myself working as a recruiter for C# and C++ developers. I spent my days making cold calls and trying to sell candidates whose skill sets I didn't fully comprehend.</p>
                     <p>"But James, we're just a mom and pop shop, what exactly would we need a C# developer for?"</p>
                     <p>"Well Bob, if you have to ask then you are <i>definitely</i> in need of one."</p>
